# codebase-assistant

./: README.md  chunker.py  pyproject.toml  walker.py
backend/: .dockerignore  .gitignore  Dockerfile  README.md  app.py  chunker.py  config.py  database.py  docker-compose.yml  embeddings.py  logger.py  main.py  models.py  pyproject.toml  walker.py
backend/agents/: answer_agent.py  deepseek.py  orchestrator.py  query_agent.py  query_router.py
backend/api/: app.py  auth.py  celery_worker.py  dependencies.py  schemas.py  utils.py
backend/api/routers/: auth_router.py  conversations.py  index.py  query.py
backend/indexing/: chunker.py  embeddings.py  pipeline.py  walker.py
backend/retrieval/: hybrid_search.py
frontend/: package-lock.json  package.json  vercel.json
frontend/src/: App.css  App.tsx  api.ts  types.ts
frontend/src/components/: AuthModal.tsx  CodeDrawer.tsx  CodeViewer.tsx  MessageBubble.tsx  Sidebar.tsx  Toast.tsx  Workspace.tsx  ZeroState.tsx
frontend/src/utils/: session.ts
