[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "celery>=5.6.3",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.136.0",
    "openai>=2.31.0",
    "passlib[bcrypt]>=1.7.4",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.13.0",
    "pydantic-settings>=2.13.1",
    "pyjwt[crypto]>=2.12.1",
    "python-multipart>=0.0.26",
    "redis>=7.4.0",
    "sentence-transformers>=5.3.0",
    "sqlalchemy>=2.0.49",
    "tree-sitter>=0.25.2",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-python>=0.25.0",
    "uvicorn>=0.44.0",
]
